fix: better safe area padding on iOS (#1618)

--- a/packages/web/src/stylesheets/_main.scss
+++ b/packages/web/src/stylesheets/_main.scss
@@ -28,10 +28,6 @@
   --safe-area-inset-bottom: env(safe-area-inset-bottom, 0);
   --safe-area-inset-left: env(safe-area-inset-left, 0);
   --safe-area-inset-right: env(safe-area-inset-right, 0);
-
-  --safe-viewport-height: calc(
-    var(--viewport-height) - calc(var(--safe-area-inset-top) + var(--safe-area-inset-bottom))
-  );
 }
 
 html {
@@ -44,7 +40,6 @@ body {
   color: var(--sn-stylekit-foreground-color);
 }
 
-body,
 .safe-area-padding {
   padding: var(--safe-area-inset-top) var(--safe-area-inset-right) var(--safe-area-inset-bottom)
     var(--safe-area-inset-left);
